# skalu

./: .gitignore  AGENTS.MD  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  TESTING.md  app.py  demo_utils.py  docker-compose.yml  entrypoint.sh  packages.txt  pyproject.toml  render.yaml  requirements-test.txt  requirements.txt  requirements_dev.txt  setup.py  setup.sh  skalu.ipynb  skalu.py  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  test.yml
src/skalu/: __init__.py  __version__.py  demo_utils.py  processing.py
src/skalu/web/: __init__.py  flask_app.py  streamlit_app.py
src/skalu/web/templates/: index.html
templates/: index.html
tests/: conftest.py  expected_test_results.json  test_skalu.py
